# ssn-v1

./: .gitignore  README.md  environment.yml  pyproject.toml
bayesopt_demo/: bayesian_optimization_demo.ipynb  bayesopt_fullSearch.ipynb  config.20250219grid.flexCRF.json  config.EI512_trainingTest3_mapSeed42_netSeed42.training_sample_3_FullFieldPlaid_ori0p0_maskori90p0_C0p00_maskC0p05_dur3000.json  config.EI512_trainingTest3_mapSeed42_netSeed42.training_sample_3_FullFieldPlaid_ori0p0_maskori90p0_C0p00_maskC1p00_dur3000.json  config.EI512_trainingTest3_mapSeed42_netSeed42.training_sample_3_FullFieldPlaid_ori0p0_maskori90p0_C0p05_maskC0p00_dur3000.json  config.EI512_trainingTest3_mapSeed42_netSeed42.training_sample_3_FullFieldPlaid_ori0p0_maskori90p0_C0p25_maskC0p75_dur3000.json  config.EI512_trainingTest3_mapSeed42_netSeed42.training_sample_3_FullFieldPlaid_ori0p0_maskori90p0_C0p50_maskC0p50_dur3000.json  config.EI512_trainingTest3_mapSeed42_netSeed42.training_sample_3_FullFieldPlaid_ori0p0_maskori90p0_C1p00_maskC0p00_dur3000.json  config.EI512_trainingTest3_mapSeed42_netSeed42.training_sample_3_OUNoise_mean50p00_sigma5p00_theta2p00_seed42.json  make_model_inputs.py  make_target_data.py
bayesopt_tutorial/: tutorial_bayesopt.ipynb
claude_tutorial/: config.EI512_tutorial.json  make_inputs.py  make_targets.py  tutorial_bayesopt.ipynb
tests/: README.md  __init__.py  config.test_mapSeed42_netSeed42.test_stim_FullFieldGrating_ori0p0_C1p00_dur3000.json  conftest.py  inspect_eigenspectrum_cost.py  inspect_minimal_ssn.ipynb  test_construct_W.py  test_eigenspectrum_cost.py  (+6 more)
(+45 files in other folders)
